--- a/bib/composable_scheduler_activations-2016_abstract.html
+++ b/bib/composable_scheduler_activations-2016_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,18 @@
   <h1 class="page-title">Composable scheduler activations for Haskell</h1>
   <p>(K. C. Sivaramakrishnan, Tim Harris, Simon Marlow, Simon Peyton Jones) <em>Journal of Functional Programming</em>, 26, pages e9 (39 pages), 2016</p>
 <p><a href="http://simonmar.github.io/bib/papers/composable_scheduler_activations.pdf">Full Paper</a> | <a href="composable_scheduler_activations-2016.bib">BibTeX</a></p>
-<p>The runtime for a modern, concurrent, garbage collected language like Java or Haskell is like an operating system: sophisticated, complex, performant, but alas very hard to change. If more of the runtime system were in the high-level language, it would be far more modular and malleable. In this paper, we describe a novel concurrency substrate design for the Glasgow Haskell Compiler that allows multicore schedulers for concurrent and parallel Haskell programs to be safely and modularly described as libraries in Haskell. The approach relies on abstracting the interface to the user-implemented schedulers through scheduler activations, together with the use of Software Transactional Memory to promote safety in a multicore context.</p>
+<p>The runtime for a modern, concurrent, garbage collected language like
+Java or Haskell is like an operating system: sophisticated, complex,
+performant, but alas very hard to change. If more of the runtime
+system were in the high-level language, it would be far more modular
+and malleable. In this paper, we describe a novel concurrency
+substrate design for the Glasgow Haskell Compiler that allows
+multicore schedulers for concurrent and parallel Haskell programs to
+be safely and modularly described as libraries in Haskell. The
+approach relies on abstracting the interface to the user-implemented
+schedulers through scheduler activations, together with the use of
+Software Transactional Memory to promote safety in a multicore
+context.</p>
 </div>
 
       </div>
