--- a/bib/concffi04_abstract.html
+++ b/bib/concffi04_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,9 +111,19 @@
   <h1 class="page-title">Extending the {H}askell Foreign Function Interface with Concurrency</h1>
   <p>(Simon Marlow, Simon Peyton Jones, Wolfgang Thaller) <em>Proceedings of the ACM SIGPLAN workshop on Haskell</em>, pages 57–68, Snowbird, Utah, USA, September 2004</p>
 <p><a href="http://simonmar.github.io/bib/papers/conc-ffi.pdf">Full Paper</a> | <a href="concffi04.bib">BibTeX</a></p>
-<p>A Haskell system that includes both the Foreign Function Interface and the Concurrent Haskell extension must consider how Concurrent Haskell threads map to external Operating System threads for the purposes of specifying in which thread a foreign call is made.</p>
-<p>Many concurrent languages take the easy route and specify a one-to-one correspondence between the language’s own threads and external OS threads. However, OS threads tend to be expensive, so this choice can limit the performance and scalability of the concurrent language.</p>
-<p>The main contribution of this paper is a language design that provides a neat solution to this problem, allowing the implementor of the language enough flexibility to provide cheap lightweight threads, while still providing the programmer with control over the mapping between internal threads and external threads where necessary.</p>
+<p>A Haskell system that includes both the Foreign Function Interface and
+the Concurrent Haskell extension must consider how Concurrent Haskell
+threads map to external Operating System threads for the purposes of
+specifying in which thread a foreign call is made.</p>
+<p>Many concurrent languages take the easy route and specify a one-to-one
+correspondence between the language’s own threads and external OS
+threads. However, OS threads tend to be expensive, so this choice can
+limit the performance and scalability of the concurrent language.</p>
+<p>The main contribution of this paper is a language design that provides
+a neat solution to this problem, allowing the implementor of the
+language enough flexibility to provide cheap lightweight threads,
+while still providing the programmer with control over the mapping
+between internal threads and external threads where necessary.</p>
 </div>
 
       </div>
