--- a/bib/erltc97_abstract.html
+++ b/bib/erltc97_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,14 @@
   <h1 class="page-title">A practical subtyping system for Erlang</h1>
   <p>(Simon Marlow, Philip Wadler) <em>ICFP ’97: Proceedings of the second ACM SIGPLAN international conference on Functional programming</em>, pages 136–149, Amsterdam, The Netherlands, ACM Press, June 1997</p>
 <p><a href="http://simonmar.github.io/bib/papers/erltc.pdf">Full Paper</a> | <a href="erltc97.bib">BibTeX</a></p>
-<p>We present a type system for the programming language Erlang. The type system supports subtyping and declaration-free recursive types, using subtyping constraints. Our system is similar to one explored by Aiken and Wimmers, though it sacrifices expressive power in favour of simplicity. We cover our techniques for type inference, type simplification, and checking when an inferred type conforms to a user-supplied type signature, and report on early experience with our prototype.</p>
+<p>We present a type system for the programming language Erlang. The
+type system supports subtyping and declaration-free recursive types,
+using subtyping constraints. Our system is similar to one explored by
+Aiken and Wimmers, though it sacrifices expressive power in favour of
+simplicity. We cover our techniques for type inference, type
+simplification, and checking when an inferred type conforms to a
+user-supplied type signature, and report on early experience with our
+prototype.</p>
 </div>
 
       </div>
