--- a/bib/evalapply04_abstract.html
+++ b/bib/evalapply04_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,15 @@
   <h1 class="page-title">Making a fast curry: push/enter vs. eval/apply for higher-order languages</h1>
   <p>(Simon Marlow, Simon Peyton Jones) <em>ICFP’04: Proceedings of the ACM SIGPLAN 2004 International Conference on Functional Programming</em>, pages 4–15, ACM Press, 2004</p>
 <p><a href="http://simonmar.github.io/bib/papers/eval-apply.pdf">Full Paper</a> | <a href="evalapply04.bib">BibTeX</a></p>
-<p>Higher-order languages that encourage currying are implemented using one of two basic evaluation models: push/enter or eval/apply. Implementors use their intuition and qualitative judgements to choose one model or the other.Our goal in this paper is to provide, for the first time, a more substantial basis for this choice, based on our qualitative and quantitative experience of implementing both models in a state-of-the-art compiler for Haskell.Our conclusion is simple, and contradicts our initial intuition: compiled implementations should use eval/apply.</p>
+<p>Higher-order languages that encourage currying are implemented using
+one of two basic evaluation models: push/enter or
+eval/apply. Implementors use their intuition and qualitative
+judgements to choose one model or the other.Our goal in this paper is
+to provide, for the first time, a more substantial basis for this
+choice, based on our qualitative and quantitative experience of
+implementing both models in a state-of-the-art compiler for
+Haskell.Our conclusion is simple, and contradicts our initial
+intuition: compiled implementations should use eval/apply.</p>
 </div>
 
       </div>
