--- a/bib/haddock02_abstract.html
+++ b/bib/haddock02_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,14 @@
   <h1 class="page-title">{H}addock, A {H}askell Documentation Tool</h1>
   <p>(Simon Marlow) <em>Proceedings of the ACM SIGPLAN workshop on Haskell</em>, Pittsburgh Pennsylvania, USA, ACM Press, October 2002</p>
 <p><a href="http://simonmar.github.io/bib/papers/haddock.pdf">Full Paper</a> | <a href="haddock02.bib">BibTeX</a></p>
-<p>This paper describes Haddock, a tool for automatically generating documentation from Haskell source code. Haddock’s unique approach to source code annotations provides a useful separation between the implementation of a library and the interface (and hence also the documentation) of that library, so that as far as possible the documentation annotations in the source code do not affect the programmer’s freedom over the structure of the implementation. The internal structure and implementation of Haddock is also discussed.</p>
+<p>This paper describes Haddock, a tool for automatically generating
+documentation from Haskell source code. Haddock’s unique approach to
+source code annotations provides a useful separation between the
+implementation of a library and the interface (and hence also the
+documentation) of that library, so that as far as possible the
+documentation annotations in the source code do not affect the
+programmer’s freedom over the structure of the implementation. The
+internal structure and implementation of Haddock is also discussed.</p>
 </div>
 
       </div>
