--- a/bib/impexceptions99_abstract.html
+++ b/bib/impexceptions99_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -110,10 +110,24 @@
         <div class="page">
   <h1 class="page-title">A Semantics for Imprecise Exceptions</h1>
   <p>(Simon Peyton Jones, Alastair Reid, Tony Hoare, Simon Marlow, Fergus Henderson) <em>Proceedings of the ACM SIGPLAN ’99 Conference on Programming Language Design and Implementation</em>, pages 25–36, Atlanta, Georgia, May 1999</p>
-<div style="white-space: pre-line;"><a href="impexceptions99.bib">BibTeX</a></div>
-<p>Some modern superscalar microprocessors provide only {}. That is, they do not guarantee to report the same exception that would be encountered by a straightforward sequential execution of the program. In exchange, they offer increased performance or decreased chip area (which amount to much the same thing).</p>
-<p>This performance/precision tradeoff has not so far been much explored at the programming language level. In this paper we propose a design for imprecise exceptions in the lazy functional programming language Haskell. We discuss several designs, and conclude that imprecision is essential if the language is still to enjoy its current rich algebra of transformations. We sketch a precise semantics for the language extended with exceptions.</p>
-<p>The paper shows how to extend Haskell with exceptions without crippling the language or its compilers. We do not yet have enough experience of using the new mechanism to know whether it strikes an appropriate balance between expressiveness and performance.</p>
+<div class="line-block"><a href="impexceptions99.bib">BibTeX</a></div>
+<p>Some modern superscalar microprocessors provide only
+{}.
+That is, they do not guarantee to report the same exception that would
+be encountered by a straightforward sequential execution of the program.
+In exchange, they offer increased performance or decreased chip area (which
+amount to much the same thing).</p>
+<p>This performance/precision tradeoff has not so far been much explored
+at the programming language level. In this paper we propose a design
+for imprecise exceptions in the lazy functional programming language
+Haskell. We discuss several designs, and conclude that
+imprecision is essential if the language is still to enjoy its current
+rich algebra of transformations. We sketch a precise semantics for the
+language extended with exceptions.</p>
+<p>The paper shows how to extend Haskell with exceptions without
+crippling the language or its compilers. We do not yet have enough
+experience of using the new mechanism to know whether it strikes an
+appropriate balance between expressiveness and performance.</p>
 </div>
 
       </div>
