--- a/bib/local-gc-2011_abstract.html
+++ b/bib/local-gc-2011_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,15 @@
   <h1 class="page-title">Multicore Garbage Collection with Local Heaps</h1>
   <p>(Simon Marlow, Simon Peyton Jones) <em>ISMM ’11: Proceedings of the 10th International Symposium on Memory Management</em>, San Jose, California, ACM, June 2011</p>
 <p><a href="http://simonmar.github.io/bib/papers/local-gc.pdf">Full Paper</a> | <a href="local-gc-2011.bib">BibTeX</a></p>
-<p>In a parallel, shared-memory, language with a garbage collected heap, it is desirable for each processor to perform minor garbage collections independently. Although obvious, it is difficult to make this idea pay off in practice, especially in languages where mutation is common. We present several techniques that substantially improve the state of the art. We describe these techniques in the context of a full-scale implementation of Haskell, and demonstrate that our local-heap collector substantially improves scaling, peak performance, and robustness.</p>
+<p>In a parallel, shared-memory, language with a garbage collected heap,
+it is desirable for each processor to perform minor garbage
+collections independently. Although obvious, it is difficult to make
+this idea pay off in practice, especially in languages where mutation
+is common. We present several techniques that substantially improve
+the state of the art. We describe these techniques in the context of a
+full-scale implementation of Haskell, and demonstrate that our
+local-heap collector substantially improves scaling, peak performance,
+and robustness.</p>
 </div>
 
       </div>
