--- a/bib/monad-par-2011_abstract.html
+++ b/bib/monad-par-2011_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,18 @@
   <h1 class="page-title">A Monad for Deterministic Parallelism</h1>
   <p>(Simon Marlow, Ryan Newton, Simon Peyton Jones) <em>Haskell ’11: Proceedings of the Fourth ACM SIGPLAN Symposium on Haskell</em>, Tokyo, Japan, ACM, 2011</p>
 <p><a href="http://simonmar.github.io/bib/papers/monad-par.pdf">Full Paper</a> | <a href="monad-par-2011.bib">BibTeX</a></p>
-<p>We present a new programming model for deterministic parallel computation in a pure functional language. The model is monadic and has explicit granularity, but allows dynamic construction of dataflow networks that are scheduled at runtime, while remaining deterministic and pure. The implementation is based on monadic concurrency, which has until now only been used to simulate concurrency in functional languages, rather than to provide parallelism. We present the API with its semantics, and argue that parallel execution is deterministic. Furthermore, we present a complete work-stealing scheduler implemented as a Haskell library, and we show that it performs at least as well as the existing parallel programming models in Haskell.</p>
+<p>We present a new programming model for deterministic parallel
+computation in a pure functional language. The model is monadic and
+has explicit granularity, but allows dynamic construction of dataflow
+networks that are scheduled at runtime, while remaining deterministic
+and pure. The implementation is based on monadic concurrency, which
+has until now only been used to simulate concurrency in functional
+languages, rather than to provide parallelism. We present the API
+with its semantics, and argue that parallel execution is
+deterministic. Furthermore, we present a complete work-stealing
+scheduler implemented as a Haskell library, and we show that it
+performs at least as well as the existing parallel programming models
+in Haskell.</p>
 </div>
 
       </div>
