--- a/bib/stm05_abstract.html
+++ b/bib/stm05_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,15 @@
   <h1 class="page-title">Composable Memory Transactions</h1>
   <p>(Tim Harris, Simon Marlow, Simon Peyton Jones, Maurice Herlihy) <em>PPoPP’05: ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</em>, Chicago, Illinois, June 2005</p>
 <p><a href="http://simonmar.github.io/bib/papers/stm.pdf">Full Paper</a> | <a href="stm05.bib">BibTeX</a></p>
-<p>Writing concurrent programs is notoriously difficult, and is of increasing practical importance. A particular source of concern is that even correctly-implemented concurrency abstractions cannot be composed together to form larger abstractions. In this paper we present a new concurrency model, based on , that offers far richer composition. All the usual benefits of transactional memory are present (e.g. freedom from deadlock), but in addition we describe new modular forms of  and  that have been inaccessible in earlier work.</p>
+<p>Writing concurrent programs is notoriously difficult, and is of
+increasing practical importance. A particular source of concern
+is that even correctly-implemented concurrency abstractions cannot
+be composed together to form larger abstractions. In this paper
+we present a new concurrency model, based on ,
+that offers far richer composition. All the usual benefits of transactional memory
+are present (e.g. freedom from deadlock), but in addition we describe
+new modular forms of  and  that
+have been inaccessible in earlier work.</p>
 </div>
 
       </div>
