--- a/bib/updabs93_abstract.html
+++ b/bib/updabs93_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -110,8 +110,18 @@
         <div class="page">
   <h1 class="page-title">Update Avoidance Analysis by Abstract Interpretation</h1>
   <p>(Simon Marlow) <em>Proceedings of the 1993 Glasgow Workshop on Functional Programming</em>, Ayr, Scotland, Springer-Verlag, 1993</p>
-<div style="white-space: pre-line;"><a href="updabs93.bib">BibTeX</a></div>
-<p>A requirement of lazy evaluation is that the value of any subexpression in the program is calculated no more than once. This is achieved by updating an expression with its value, once computed. The problem is that updating is a costly operation, and experimentation has shown that it is only necessary in about 30% of cases (that is, 70% of expressions represent values that are only ever required once during execution). The aim of the analysis presented in this paper is to discover expressions that do not need to be updated, and thus reduce the execution time of the program. The analysis has been implemented in the Glasgow Haskell Compiler, and results are given.</p>
+<div class="line-block"><a href="updabs93.bib">BibTeX</a></div>
+<p>A requirement of lazy evaluation is that the value
+of any subexpression in the program is calculated no more than once.
+This is achieved by updating an expression with its value, once
+computed. The problem is that updating is a costly operation, and
+experimentation has shown that it is only necessary in about 30% of
+cases (that is, 70% of expressions represent values that are only
+ever required once during execution). The aim of the analysis
+presented in this paper is to discover expressions that do not need to
+be updated, and thus reduce the execution time of the program. The
+analysis has been implemented in the Glasgow Haskell Compiler, and
+results are given.</p>
 </div>
 
       </div>
