--- a/bib/webserverjfp_abstract.html
+++ b/bib/webserverjfp_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,8 +111,18 @@
   <h1 class="page-title">Developing a high-performance web server in {C}oncurrent {H}askell</h1>
   <p>(Simon Marlow) <em>Journal of Functional Programming</em>, 12(4+5):359–374, July 2002</p>
 <p><a href="http://simonmar.github.io/bib/papers/web-server-jfp.pdf">Full Paper</a> | <a href="webserverjfp.bib">BibTeX</a></p>
-<p>Server applications, and in particular network-based server applications, place a unique combination of demands on a programming language: lightweight concurrency, high I/O throughput, and fault tolerance are all important.</p>
-<p>This paper describes a prototype web server written in Concurrent Haskell (with extensions), and presents two useful results: firstly, a conforming server could be written with minimal effort, leading to an implementation in less than 1500 lines of code, and secondly the naive implementation produced reasonable performance. Furthermore, making minor modifications to a few time-critical components improved performance to a level acceptable for anything but the most heavily loaded web servers.</p>
+<p>Server applications, and in particular network-based server
+applications, place a unique combination of demands on a programming
+language: lightweight concurrency, high I/O throughput, and fault
+tolerance are all important.</p>
+<p>This paper describes a prototype web server written in Concurrent
+Haskell (with extensions), and presents two useful results: firstly, a
+conforming server could be written with minimal effort, leading to an
+implementation in less than 1500 lines of code, and secondly the naive
+implementation produced reasonable performance. Furthermore, making
+minor modifications to a few time-critical components improved
+performance to a level acceptable for anything but the most heavily
+loaded web servers.</p>
 </div>
 
       </div>
