--- a/bib/applicativedo-2016_abstract.html
+++ b/bib/applicativedo-2016_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,16 @@
   <h1 class="page-title">Desugaring Haskell's Do-notation into Applicative Operations</h1>
   <p>(Simon Marlow, Simon Peyton Jones, Edward Kmett, Andrey Mokhov) <em>Proceedings of the 9th International Symposium on Haskell</em>, pages 92–104, Nara, Japan, ACM, 2016</p>
 <p><a href="http://simonmar.github.io/bib/papers/applicativedo.pdf">Full Paper</a> | <a href="applicativedo-2016.bib">BibTeX</a></p>
-<p>Monads have taken the world by storm, and are supported by do-notation (at least in Haskell). Programmers are increasingly waking up to the usefulness and ubiquity of Applicatives, but they have so far been hampered by the absence of supporting notation. In this paper we show how to re-use the very same do-notation to work for Applicatives as well, providing efficiency benefits for some types that are both Monad and Applicative, and syntactic convenience for those that are merely Applicative. The result is fully implemented as an optional extension in GHC, and is in use at Facebook to make it easy to write highly-parallel queries in a distributed system.</p>
+<p>Monads have taken the world by storm, and are supported by
+do-notation (at least in Haskell). Programmers are increasingly
+waking up to the usefulness and ubiquity of Applicatives, but they
+have so far been hampered by the absence of supporting notation. In
+this paper we show how to re-use the very same do-notation to work
+for Applicatives as well, providing efficiency benefits for some types
+that are both Monad and Applicative, and syntactic convenience for
+those that are merely Applicative. The result is fully implemented
+as an optional extension in GHC, and is in use at Facebook to make
+it easy to write highly-parallel queries in a distributed system.</p>
 </div>
 
       </div>
