--- a/bib/async01_abstract.html
+++ b/bib/async01_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,20 @@
   <h1 class="page-title">Asynchronous exceptions in {H}askell</h1>
   <p>(Simon Marlow, Simon Peyton Jones, Andrew Moran, John Reppy) <em>PLDI ’01: Proceedings of the ACM SIGPLAN 2001 conference on Programming language design and implementation</em>, pages 274–285, Snowbird, Utah, United States, ACM Press, 2001</p>
 <p><a href="http://simonmar.github.io/bib/papers/async.pdf">Full Paper</a> | <a href="async01.bib">BibTeX</a></p>
-<p>Asynchronous exceptions, such as timeouts, are important for robust, modular programs, but are extremely difficult to program with — so much so that most programming languages either heavily restrict them or ban them altogether. We extend our earlier work, in which we added synchronous exceptions to Haskell, to support asynchronous exceptions too. Our design introduces scoped combinators for blocking and unblocking asynchronous interrupts, along with a somewhat surprising semantics for operations that can suspend. We give a formal semantics for our system, along with the first steps towards a theory that enables us to prove program properties. Using our primitives we can define combinators that support (for example) robust access to shared data; and using the theory we can prove that they have no race conditions, regardless of the behaviour of the program’s environment. Shazam!</p>
+<p>Asynchronous exceptions, such as timeouts, are important for
+robust, modular programs, but are extremely difficult to program with
+— so much so that most programming languages either heavily restrict
+them or ban them altogether. We extend our earlier work, in which we
+added synchronous exceptions to Haskell, to support asynchronous
+exceptions too. Our design introduces scoped combinators for blocking
+and unblocking asynchronous interrupts, along with a somewhat
+surprising semantics for operations that can suspend. We give a
+formal semantics for our system, along with the first steps towards a
+theory that enables us to prove program properties. Using our
+primitives we can define combinators that support (for example) robust
+access to shared data; and using the theory we can prove that they
+have no race conditions, regardless of the behaviour of the program’s
+environment. Shazam!</p>
 </div>
 
       </div>
