--- a/bib/cnc-2010_abstract.html
+++ b/bib/cnc-2010_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,17 @@
   <h1 class="page-title">Intel Concurrent Collections for {H}askell</h1>
   <p>(Ryan Newton, Chih-Ping Chen, Simon Marlow) (unpublished), 2010</p>
 <p><a href="http://simonmar.github.io/bib/papers/haskell_cnc_draft_submission.pdf">Full Paper</a> | <a href="cnc-2010.bib">BibTeX</a></p>
-<p>Intel Concurrent Collections (CnC) is a parallel programming model in which a network of steps (functions) communicate through message-passing as well as a limited form of shared memory. This paper describes a new implementation of CnC for Haskell. Compared to existing parallel programming models for Haskell, CnC occupies a useful point in the design space: pure and deterministic like Strategies, but more explicit about granularity and the structure of the computation, which affords the programmer greater control over parallel performance. We present results on 4, 32, and 48-core machines demonstrating parallel speedups ranging between 7X and 22X on non-trivial benchmarks.</p>
+<p>Intel Concurrent Collections (CnC) is a parallel programming
+model in which a network of steps (functions) communicate
+through message-passing as well as a limited form of shared memory.
+This paper describes a new implementation of CnC for Haskell.
+Compared to existing parallel programming models for Haskell,
+CnC occupies a useful point in the design space: pure and deterministic
+like Strategies, but more explicit about granularity and
+the structure of the computation, which affords the programmer
+greater control over parallel performance. We present results on 4,
+32, and 48-core machines demonstrating parallel speedups ranging
+between 7X and 22X on non-trivial benchmarks.</p>
 </div>
 
       </div>
