--- a/bib/concsubstrate07_abstract.html
+++ b/bib/concsubstrate07_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,8 +111,19 @@
   <h1 class="page-title">Lightweight concurrency primitives for GHC</h1>
   <p>(Peng Li, Simon Marlow, Simon Peyton Jones, Andrew Tolmach) Haskell ’07: Proceedings of the ACM SIGPLAN workshop on Haskell workshop, pages 107–118, Freiburg, Germany, ACM, June 2007</p>
 <p><a href="http://simonmar.github.io/bib/papers/conc-substrate.pdf">Full Paper</a> | <a href="concsubstrate07.bib">BibTeX</a></p>
-<p>The Glasgow Haskell Compiler (GHC) has quite sophisticated support for concurrency in its runtime system, which is written in low-level C code. As GHC evolves, the runtime system becomes increasingly complex, error-prone, difficult to maintain and difficult to add new concurrency features.</p>
-<p>This paper presents an alternative approach to implement concurrency in GHC. Rather than hard-wiring all kinds of concurrency features, the runtime system is a thin substrate providing only a small set of concurrency primitives, and the rest of concurrency features are implemented in software libraries written in Haskell. This design improves the safety of concurrency support; it also provides more customizability of concurrency features, as new concurrency features can be developed as Haskell library packages and deployed modularly.</p>
+<p>The Glasgow Haskell Compiler (GHC) has quite sophisticated support
+for concurrency in its runtime system, which is written in low-level
+C code. As GHC evolves, the runtime system becomes increasingly
+complex, error-prone, difficult to maintain and difficult to add new
+concurrency features.</p>
+<p>This paper presents an alternative approach to implement concurrency
+in GHC. Rather than hard-wiring all kinds of concurrency features,
+the runtime system is a thin substrate providing only a small set of
+concurrency primitives, and the rest of concurrency features are
+implemented in software libraries written in Haskell. This design
+improves the safety of concurrency support; it also provides more
+customizability of concurrency features, as new concurrency features
+can be developed as Haskell library packages and deployed modularly.</p>
 </div>
 
       </div>
