--- a/bib/exploringbarrier04_abstract.html
+++ b/bib/exploringbarrier04_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,21 @@
   <h1 class="page-title">Exploring the Barrier to Entry: Incremental Generational Garbage Collection for {H}askell</h1>
   <p>(A.M. Cheadle, A.J. Field, S. Marlow, S.L. Peyton Jones, R.L. While) <em>International Symposium on Memory Management</em>, ACM, October 2004</p>
 <p><a href="http://simonmar.github.io/bib/papers/ExploringBarrierToEntry.pdf">Full Paper</a> | <a href="exploringbarrier04.bib">BibTeX</a></p>
-<p>We document the design and implementation of a “production” incremental garbage collector for GHC 6.02. It builds on our earlier work (Non-stop Haskell) that exploited GHC’s dynamic dispatch mechanism to hijack object code pointers so that objects in to-space automatically scavenge themselves when the mutator attempts to &quot; them. This paper details various optimisations based on code specialisation that remove the dynamic space, and associated time, overheads that accompanied our earlier scheme. We detail important implementation issues and provide a detailed evaluation of a range of design alternatives in comparison with Non-stop Haskell and GHC’s current generational collector. We also show how the same code specialisation techniques can be used to eliminate the write barrier in a generational collector.</p>
+<p>We document the design and implementation of a “production”
+incremental garbage collector for GHC 6.02. It builds
+on our earlier work (Non-stop Haskell) that exploited GHC’s
+dynamic dispatch mechanism to hijack object code pointers
+so that objects in to-space automatically scavenge themselves
+when the mutator attempts to ” them. This
+paper details various optimisations based on code specialisation
+that remove the dynamic space, and associated time,
+overheads that accompanied our earlier scheme. We detail
+important implementation issues and provide a detailed
+evaluation of a range of design alternatives in comparison
+with Non-stop Haskell and GHC’s current generational collector.
+We also show how the same code specialisation techniques
+can be used to eliminate the write barrier in a generational
+collector.</p>
 </div>
 
       </div>
