--- a/bib/extexceptions06_abstract.html
+++ b/bib/extexceptions06_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,16 @@
   <h1 class="page-title">An Extensible Dynamically-Typed Hierarchy of Exceptions</h1>
   <p>(Simon Marlow) <em>Haskell ’06: Proceedings of the 2006 ACM SIGPLAN workshop on Haskell</em>, Portland, Oregon, ACM Press, September 2006</p>
 <p><a href="http://simonmar.github.io/bib/papers/ext-exceptions.pdf">Full Paper</a> | <a href="extexceptions06.bib">BibTeX</a></p>
-<p>In this paper we address the lack of extensibility of the exception type in Haskell. We propose a lightweight solution involving the use of existential types and the Typeable class only, and show how our solution allows a fully extensible hierarchy of exception types to be declared, in which a single overloaded catch operator can be used to catch either specific exception types, or exceptions belonging to any subclass in the hierarchy. We also show how to combine the existing object-oriented framework OOHaskell with our design, such that OOHaskell objects can be thrown and caught as exceptions, with full support for implicit OOHaskell subtyping in the <span class="citation">@catch</span>@ operator.</p>
+<p>In this paper we address the lack of extensibility of the exception
+type in Haskell. We propose a lightweight solution involving the use
+of existential types and the Typeable class only, and show how our
+solution allows a fully extensible hierarchy of exception types to be
+declared, in which a single overloaded catch operator can be used to
+catch either specific exception types, or exceptions belonging to any
+subclass in the hierarchy. We also show how to combine the existing
+object-oriented framework OOHaskell with our design, such that
+OOHaskell objects can be thrown and caught as exceptions, with full
+support for implicit OOHaskell subtyping in the <span class="citation" data-cites="catch">@catch</span>@ operator.</p>
 </div>
 
       </div>
