--- a/bib/lockfreedatastructures06_abstract.html
+++ b/bib/lockfreedatastructures06_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,13 @@
   <h1 class="page-title">Lock Free Data Structures using STMs in {H}askell</h1>
   <p>(Anthony Discolo, Tim Harris, Simon Marlow, Simon Peyton Jones, Satnam Singh) <em>FLOPS 2006: Eighth International Symposium on Functional and Logic Programming</em>, Fuji Susono, JAPAN, April 2006</p>
 <p><a href="http://simonmar.github.io/bib/papers/lockfreedatastructures.pdf">Full Paper</a> | <a href="lockfreedatastructures06.bib">BibTeX</a></p>
-<p>This paper explores the feasibility of re-expressing concurrent algorithms with explicit locks in terms of lock free code written using Haskell’s implementation of software transactional memory. Experimental results are presented which show that for multi-processor systems the simpler lock free implementations offer superior performance when compared to their corresponding lock based implementations.</p>
+<p>This paper explores the feasibility of re-expressing concurrent
+algorithms with explicit locks in terms of lock free code written
+using Haskell’s implementation of software transactional
+memory. Experimental results are presented which show that for
+multi-processor systems the simpler lock free implementations offer
+superior performance when compared to their corresponding lock based
+implementations.</p>
 </div>
 
       </div>
