--- a/bib/par-tutorial-cefp-2012_abstract.html
+++ b/bib/par-tutorial-cefp-2012_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,13 @@
   <h1 class="page-title">Parallel and Concurrent Programming in {H}askell</h1>
   <p>(Simon Marlow) <em>CEFP 2011</em>, volume 7241 of LNCS, pages 339–401, 2012</p>
 <p><a href="http://simonmar.github.io/bib/papers/par-tutorial-cefp-2012.pdf">Full Paper</a> | <a href="par-tutorial-cefp-2012.bib">BibTeX</a></p>
-<p>Haskell provides a rich set of abstractions for parallel and concurrent programming. This tutorial covers the basic concepts involved in writing parallel and concurrent programs in Haskell, and takes a deliberately practical approach: most of the examples are real Haskell programs that you can compile, run, measure, modify and experiment with. We cover parallel programming with the Eval monad, Evaluation Strategies, and the Par monad. On the concurrent side, we cover threads, MVars, asynchronous exceptions, Software Transactional Memory, the Foreign Function Interface, and briefly look at the construction of high-speed network servers in Haskell.</p>
+<p>Haskell provides a rich set of abstractions for parallel and
+concurrent programming. This tutorial covers the basic concepts involved
+in writing parallel and concurrent programs in Haskell, and takes a deliberately practical approach: most of the examples are real Haskell programs that you can compile, run, measure, modify and experiment with.
+We cover parallel programming with the Eval monad, Evaluation Strategies, and the Par monad. On the concurrent side, we cover threads, MVars,
+asynchronous exceptions, Software Transactional Memory, the Foreign
+Function Interface, and briefly look at the construction of high-speed
+network servers in Haskell.</p>
 </div>
 
       </div>
