--- a/bib/parallel-gc-08_abstract.html
+++ b/bib/parallel-gc-08_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,7 +111,14 @@
   <h1 class="page-title">Parallel Generational-Copying Garbage Collection with a Block-Structured Heap</h1>
   <p>(Simon Marlow, Tim Harris, Roshan P. James, Simon Peyton Jones) <em>ISMM ’08: Proceedings of the 7th international symposium on Memory management</em>, Tucson, Arizona, ACM, June 2008</p>
 <p><a href="http://simonmar.github.io/bib/papers/parallel-gc.pdf">Full Paper</a> | <a href="parallel-gc-08.bib">BibTeX</a></p>
-<p>We present a parallel generational-copying garbage collector implemented for the Glasgow Haskell Compiler. We use a block-structured memory allocator, which provides a natural granularity for dividing the work of GC between many threads, leading to a simple yet effective method for parallelising copying GC. The results are encouraging: we demonstrate wall-clock speedups of on average a factor of 2 in GC time on a commodity 4-core machine with no programmer intervention, compared to our best sequential GC.</p>
+<p>We present a parallel generational-copying garbage collector
+implemented for the Glasgow Haskell Compiler. We use a
+block-structured memory allocator, which provides a natural
+granularity for dividing the work of GC between many threads, leading
+to a simple yet effective method for parallelising copying GC. The
+results are encouraging: we demonstrate wall-clock speedups of on
+average a factor of 2 in GC time on a commodity 4-core machine with no
+programmer intervention, compared to our best sequential GC.</p>
 </div>
 
       </div>
