--- a/bib/shake-2016_abstract.html
+++ b/bib/shake-2016_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,8 +111,18 @@
   <h1 class="page-title">Non-recursive Make Considered Harmful: Build Systems at Scale</h1>
   <p>(Andrey Mokhov, Neil Mitchell, Simon Peyton Jones, Simon Marlow) <em>Proceedings of the 9th International Symposium on Haskell</em>, pages 170–181, Nara, Japan, ACM, 2016</p>
 <p><a href="http://simonmar.github.io/bib/papers/shake.pdf">Full Paper</a> | <a href="shake-2016.bib">BibTeX</a></p>
-<p>Most build systems start small and simple, but over time grow into hairy monsters that few dare to touch. As we demonstrate in this paper, there are a few issues that cause build systems major scalability challenges, and many pervasively used build systems (e.g. Make) do not scale well.</p>
-<p>This paper presents a solution to the challenges we identify. We use functional programming to design abstractions for build systems, and implement them on top of the Shake library, which allows us to describe build rules and dependencies. To substantiate our claims, we engineer a new build system for the Glasgow Haskell Compiler. The result is more scalable, faster, and spectacularly more maintainable than its Make-based predecessor.</p>
+<p>Most build systems start small and simple, but over time grow
+into hairy monsters that few dare to touch. As we demonstrate in
+this paper, there are a few issues that cause build systems major
+scalability challenges, and many pervasively used build systems
+(e.g. Make) do not scale well.</p>
+<p>This paper presents a solution to the challenges we identify. We use
+functional programming to design abstractions for build systems, and
+implement them on top of the Shake library, which allows us to
+describe build rules and dependencies. To substantiate our claims, we
+engineer a new build system for the Glasgow Haskell Compiler. The
+result is more scalable, faster, and spectacularly more maintainable
+than its Make-based predecessor.</p>
 </div>
 
       </div>
