--- a/bib/vshaskell05_abstract.html
+++ b/bib/vshaskell05_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,9 +111,22 @@
   <h1 class="page-title">Visual {H}askell: A full-featured {H}askell development environment</h1>
   <p>(Krasimir Angelov, Simon Marlow) <em>Haskell ’05: Proceedings of the 2005 ACM SIGPLAN workshop on Haskell</em>, pages 5–16, Tallinn, Estonia, ACM Press, September 2005</p>
 <p><a href="http://simonmar.github.io/bib/papers/vshaskell.pdf">Full Paper</a> | <a href="vshaskell05.bib">BibTeX</a></p>
-<p>We describe the design and implementation of a full-featured Haskell development environment, based on Microosft’s extensible Visual Studio environment.</p>
-<p>Visual Haskell provides a number of features not found in existing Haskell development environments: interactive error-checking, displaying of inferred types in the editor, and other features based on static properties of the source code. Visual Haskell also provides full support for developing and building multi-module Haskell projects, based on the Cabal architecture. Visual Haskell supports the full GHC language, and can be used to develop real Haskell applications (including the code of the plugin itself).</p>
-<p>Visual Haskell has driven developments in other Haskell-related projects: Cabal, the Concurrent FFI extension, and an API to allow programmatic access to GHC itself. Furthermore, development of the Visual Haskell plugin required industrial-strength foreign language interoperability; we describe all our experiences in detail.</p>
+<p>We describe the design and implementation of a full-featured Haskell
+development environment, based on Microosft’s extensible Visual Studio
+environment.</p>
+<p>Visual Haskell provides a number of features not found in existing
+Haskell development environments: interactive error-checking,
+displaying of inferred types in the editor, and other features based
+on static properties of the source code. Visual Haskell also provides
+full support for developing and building multi-module Haskell projects,
+based on the Cabal architecture. Visual Haskell supports the full GHC
+language, and can be used to develop real Haskell applications
+(including the code of the plugin itself).</p>
+<p>Visual Haskell has driven developments in other Haskell-related
+projects: Cabal, the Concurrent FFI extension, and an API to allow
+programmatic access to GHC itself. Furthermore, development of the
+Visual Haskell plugin required industrial-strength foreign language
+interoperability; we describe all our experiences in detail.</p>
 </div>
 
       </div>
