--- a/bib/weakptrs99_abstract.html
+++ b/bib/weakptrs99_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -111,9 +111,19 @@
   <h1 class="page-title">Stretching the storage manager: weak pointers and stable names in {H}askell</h1>
   <p>(Simon Peyton Jones, Simon Marlow, Conal Elliot) <em>Proceedings of the 11th International Workshop on the Implementation of Functional Languages</em>, The Netherlands, Springer-Verlag, September 1999</p>
 <p><a href="http://simonmar.github.io/bib/papers/weak.pdf">Full Paper</a> | <a href="weakptrs99.bib">BibTeX</a></p>
-<p>Every now and then, a user of the Glasgow Haskell Compiler asks for a feature that requires specialised support from the storage manager. Memo functions, pointer equality, external pointers, finalizers, and weak pointers, are all examples.</p>
-<p>We take memo functions as our exemplar because they turn out to be the trickiest to support. We present no fewer than four distinct mechanisms that are needed to support memo tables, and that (in various combinations) satisfy a variety of other needs.</p>
-<p>The resulting set of primitives is undoubtedly powerful and useful. Whether they are {} powerful is not yet clear. While the focus of our discussion is on Haskell, there is nothing Haskell-specific about most of the primitives, which could readily be used in other settings.</p>
+<p>Every now and then, a user of the Glasgow Haskell
+Compiler asks for a feature that requires specialised support from the
+storage manager. Memo functions, pointer equality, external pointers,
+finalizers, and weak pointers, are all examples.</p>
+<p>We take memo functions as our exemplar because they turn out to be the
+trickiest to support. We present no fewer than four distinct
+mechanisms that are needed to support memo tables, and that (in
+various combinations) satisfy a variety of other needs.</p>
+<p>The resulting set of primitives is undoubtedly powerful and useful.
+Whether they are {} powerful is not yet clear. While the focus
+of our discussion is on Haskell, there is nothing Haskell-specific
+about most of the primitives, which could readily be used in other
+settings.</p>
 </div>
 
       </div>
