--- a/bib/webserver00_abstract.html
+++ b/bib/webserver00_abstract.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -110,9 +110,19 @@
         <div class="page">
   <h1 class="page-title">Writing High-Performance Server Applications in {H}askell, Case Study: A {H}askell Web Server</h1>
   <p>(Simon Marlow) <em>Haskell Workshop</em>, Montreal, Canada, September 2000</p>
-<div style="white-space: pre-line;"><a href="webserver00.bib">BibTeX</a></div>
-<p>Server applications, and in particular network-based server applications, place a unique combination of demands on a programming language: lightweight concurrency, high I/O throughput, and fault tolerance are all important.</p>
-<p>This paper describes a prototype web server written in Concurrent Haskell (with extensions), and presents two useful results: firstly, a conforming server could be written with minimal effort, leading to an implementation in less than 1500 lines of code, and secondly the naive implementation produced reasonable performance. Furthermore, making minor modifications to a few time-critical components improved performance to a level acceptable for anything but the most heavily loaded web servers.</p>
+<div class="line-block"><a href="webserver00.bib">BibTeX</a></div>
+<p>Server applications, and in particular network-based server
+applications, place a unique combination of demands on a programming
+language: lightweight concurrency, high I/O throughput, and fault
+tolerance are all important.</p>
+<p>This paper describes a prototype web server written in Concurrent
+Haskell (with extensions), and presents two useful results: firstly, a
+conforming server could be written with minimal effort, leading to an
+implementation in less than 1500 lines of code, and secondly the naive
+implementation produced reasonable performance. Furthermore, making
+minor modifications to a few time-critical components improved
+performance to a level acceptable for anything but the most heavily
+loaded web servers.</p>
 </div>
 
       </div>
