--- a/pages/pcph.html
+++ b/pages/pcph.html
@@ -50,7 +50,7 @@
   <div class="sidebar-item">
     <img src="../images/simonmarlow.jpg" />
     <p>Simon Marlow</p>
-    <p>Software Engineer at Facebook in London</p>
+    <p>Former Software Engineer at Meta in London</p>
     <p>Co-developer of the
       <a href="http://www.haskell.org/ghc">Glasgow Haskell
  Compiler</a>
@@ -82,7 +82,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; Simon Marlow 2016
+      &copy; Simon Marlow 2016-2025
     </p>
   </div>
 </div>
@@ -109,7 +109,9 @@
       <div class="container content">
         <div class="page">
   <h1 class="page-title">Parallel and Concurrent Programming in Haskell</h1>
-  <p><a href="http://shop.oreilly.com/product/0636920026365.do"> <img src="../images/cover.png" /> </a></p>
+  <p><a href="http://shop.oreilly.com/product/0636920026365.do">
+<img src="../images/cover.png" />
+</a></p>
 <p>The book was published in August 2013 by O’Reilly Media.</p>
 <!--
 Unfortunately the online copy of the book is temporarily unavailable
@@ -118,7 +120,8 @@ to get the content back up in some form in the future, in the meantime
 you can find it on <a
 href="https://web.archive.org/web/20180117182938/http://chimera.labs.oreilly.com/books/1230000000929/index.html">archive.org</a>.
 -->
-<a href="https://www.oreilly.com/library/view/parallel-and-concurrent/9781449335939/">Read the book online</a>
+<a href="https://www.oreilly.com/library/view/parallel-and-concurrent/9781449335939/">Read
+the book online</a>
 </p>
 <h2 id="where-to-buy">Where to buy</h2>
 <ul>
@@ -141,27 +144,48 @@ href="https://web.archive.org/web/20180117182938/http://chimera.labs.oreilly.com
 <li>Github: <a href="https://github.com/simonmar/parconc-examples">simonmar/parconc-examples</a></li>
 </ul>
 <h2 id="feedback">Feedback</h2>
-<p>Feedback is very welcome: <a href="http://oreilly.com/catalog/errata.csp?isbn=0636920026365">submit errata</a> directly to O’Reilly, where it will appear in the list for everyone to see, or feel free to <a href="mailto:marlowsd@gmail.com">contact me</a> directly.</p>
+<p>Feedback is very welcome: <a href="http://oreilly.com/catalog/errata.csp?isbn=0636920026365">submit errata</a> directly to O’Reilly, where it will appear in the
+list for everyone to see, or feel free to <a href="mailto:marlowsd@gmail.com">contact me</a> directly.</p>
 <h2 id="quotes">Quotes</h2>
 <div class="quote">
-This book explains how to write elegant and scalable code while not shying away from any of the tricky bits and corner cases – making it an essential companion for any developer!
+This book explains how to write elegant and scalable code
+while not shying away from any of the tricky bits and corner cases –
+making it an essential companion for any developer!
 <div class="attribution">
 <p>— Andres Löh, Haskell Consultant at Well-Typed LLP</p>
 </div>
 </div>
 <div class="quote">
-Not only does this book provide an excellent overview of Haskell as a language for concurrent and parallel programming, it is essential reading even if you are not a Haskell programmer. It will change how you think about designing and building high performance, solid software.
+Not only does this book provide an excellent overview of
+Haskell as a language for concurrent and parallel programming,
+it is essential reading even if you are not a Haskell
+programmer. It will change how you think about designing and
+building high performance, solid software.
 <div class="attribution">
 <p>— Bryan O’Sullivan, Director, Developer Efficiency, Facebook</p>
 </div>
 </div>
 <div class="quote">
-These days parallelism and concurrency are ubiquitous, but parallel and concurrent programs are typically much harder to write than sequential ones. Functional programming languages offer a radical and elegant attack on this challenge, by tackling the root cause, namely unrestricted side effects. But would-be users only have the research literature to guide them. This is the first book to offer a thorough, internally-consistent tutorial in parallel and concurrent functional programming aimed at practitioners rather than researchers. Moreover, Simon Marlow knows exactly what he is talking about: he built GHC’s parallel runtime system, and remains its master. This book will do more than a hundred research papers to get parallel functional programming out of the lab and into the hands of working programmers. Bravo!
+These days parallelism and concurrency are ubiquitous, but
+parallel and concurrent programs are typically much harder to
+write than sequential ones. Functional programming languages
+offer a radical and elegant attack on this challenge, by
+tackling the root cause, namely unrestricted side effects.
+But would-be users only have the research literature to
+guide them. This is the first book to offer a thorough,
+internally-consistent tutorial in parallel and concurrent
+functional programming aimed at practitioners rather than
+researchers. Moreover, Simon Marlow knows exactly what he is
+talking about: he built GHC’s parallel runtime system, and
+remains its master. This book will do more than a hundred
+research papers to get parallel functional programming out of
+the lab and into the hands of working programmers. Bravo!
 <div class="attribution">
 <p>— Simon Peyton Jones, Principal Researcher at Microsoft Research</p>
 </div>
 </div>
-<p>If you’ve read the book and want to add your comments to those above, please <a href="mailto:marlowsd@gmail.com">let me know!</a></p>
+<p>If you’ve read the book and want to add your comments to those above,
+please <a href="mailto:marlowsd@gmail.com">let me know!</a></p>
 </div>
 
       </div>
